@@ -6,3 +6,5 @@ https://svn.open-mpi.org/trac/hwloc/changeset/4309
 https://svn.open-mpi.org/trac/hwloc/changeset/4319
 https://svn.open-mpi.org/trac/hwloc/changeset/4340
 https://svn.open-mpi.org/trac/hwloc/changeset/4345
+https://svn.open-mpi.org/trac/hwloc/changeset/5295
+https://svn.open-mpi.org/trac/hwloc/changeset/5296
